<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModelAdd"
            type="com.example.listadecompras.framework.presentation.add_product.AddNewProductViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_product_title_string"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_margin="15dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameProductInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titleAddProduct"
            android:hint="@string/name_product"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:focusableInTouchMode="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameProductEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/nameProductInput"
            android:hint="@string/category"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/categoryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="textAutoComplete"
                android:padding="16dp"
                app:autoCompleteItems="@{viewModelAdd.categoryList}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/categoryInput"
            android:hint="@string/price"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789."/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/priceInput">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearBtn"
                app:layout_constraintTop_toBottomOf="@+id/priceInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clearText"
                android:backgroundTint="@color/white"
                android:textColor="@color/purple_500"
                android:layout_margin="8dp"
                android:padding="12dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/addProductBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/priceInput"
                android:layout_weight="1"
                android:text="@string/addText"
                android:layout_margin="8dp"
                android:padding="12dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>