<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="100dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/image_shopping_product"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/descriptionShoppingProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_product"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/checkedShoppingCart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_shopping_product"/>
        <TextView
            android:id="@+id/priceShoppingProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/checkedShoppingCart"
            app:layout_constraintStart_toEndOf="@id/image_shopping_product"
            app:layout_constraintTop_toBottomOf="@id/descriptionShoppingProduct"
            android:text="@string/price" />
        <CheckBox
            android:id="@+id/checkedShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/priceShoppingProduct"
            app:layout_constraintStart_toEndOf="@id/image_shopping_product"
            app:layout_constraintEnd_toStartOf="@id/checkedShoppingCart"
            android:gravity="center"
            android:layout_margin="5dp">
            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:id="@+id/remove_product_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_remove_circle"
                android:contentDescription="@string/remover_product_content" />
            <TextView
                android:id="@+id/quantity_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>
            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:id="@+id/add_product_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_circle"
                android:contentDescription="@string/add_product_content"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>