<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textEditPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_price_product_label"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textEditPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_price_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789."/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_new_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_edit_price"
        app:layout_constraintEnd_toStartOf="@+id/save_new_price"
        app:backgroundTint="@color/white"
        android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_new_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginVertical="16dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/layout_edit_price"
        app:layout_constraintStart_toEndOf="@+id/cancel_new_price"/>

</androidx.constraintlayout.widget.ConstraintLayout>